Created + linked shopping cart UI

--- a/app/templates/public/customerHome.html
+++ b/app/templates/public/customerHome.html
@@ -15,7 +15,7 @@
         <div class=" justify-content-start col-sm-6">
 
             <!--Google map-->
-            <div id="map-container-google-1" class="z-depth-1-half map-container" style="margin-top: 5%; width: 800px; height: 800px;">
+            <div id="map-container-google-1" class="z-depth-1-half map-container" style="margin-top: 5%; min-width: 400px; min-height: 400px; max-width: 800px; max-height: 800px;">
                 <iframe src="https://maps.google.com/maps?q=manhatan&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0"  allowfullscreen></iframe>
             </div>
         
@@ -46,23 +46,23 @@
             <div class="row">
                 <div class="col-sm-4 "> 
                     <div class="panel panel-success">
-                        <div class="panel-heading text-center">Food Item 1</div>
+                        <div class="panel-heading text-center">Taco</div>
                         <div class="panel-body"><img src="https://images2.minutemediacdn.com/image/upload/c_crop,h_1126,w_2000,x_0,y_181/f_auto,q_auto,w_1100/v1554932288/shape/mentalfloss/12531-istock-637790866.jpg" class="img-responsive" style="width:100%;" alt="Image"></div>
-                        <div class="panel-footer text-center"><button type="button" class="btn btn-outline-primary">Order Burger</button></div>
+                        <div class="panel-footer text-center"><button type="button" class="btn btn-outline-primary">Order</button></div>
                     </div>
                 </div>
                 <div class="col-sm-4"> 
                     <div class="panel panel-success">
-                        <div class="panel-heading text-center">Food Item 2</div>
+                        <div class="panel-heading text-center">Burger</div>
                         <div class="panel-body"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRWtHQW2W62BqfL0VM8WfBscAjMCQm6pGCNIYSV1P5Xdhy5X9bZdg&s" class="img-responsive" style="width:100%;" alt="Image"></div>
-                        <div class="panel-footer text-center"><button type="button" class="btn btn-outline-primary">Order Tacos</button></div>
+                        <div class="panel-footer text-center"><button type="button" class="btn btn-outline-primary">Order</button></div>
                     </div>
                 </div>
                 <div class="col-sm-4"> 
                     <div class="panel panel-success">
-                        <div class="panel-heading text-center">Food Item 3</div>
+                        <div class="panel-heading text-center">Pizza</div>
                         <div class="panel-body"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRZpRrqi23Ve1s27DEzMAeHQGV96g9TbHKf7agWc4bi_POz7-ps&s" class="img-responsive" style="width:100%;" alt="Image"></div>
-                        <div class="panel-footer text-center"><button type="button" class="btn btn-outline-primary">Order Pizza</button></div>
+                        <div class="panel-footer text-center"><button type="button" class="btn btn-outline-primary">Order</button></div>
                     </div>
                 </div>
             </div>
