--- a/app/templates/nav.html
+++ b/app/templates/nav.html
@@ -21,6 +21,9 @@
       <li class="nav-item">
         <a class="nav-link" href="{{ url_for('public.customerHome') }}">Customer Home</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" href="{{ url_for('public.customerShoppingCart') }}">Customer Shopping Cart</a>
+      </li>
     </ul>
     {% if current_user and current_user.is_authenticated %}
     <ul class="navbar-nav my-auto">
