--- a/app/templates/nav.html
+++ b/app/templates/nav.html
@@ -24,6 +24,12 @@
       <li class="nav-item">
         <a class="nav-link" href="{{ url_for('public.customerShoppingCart') }}">Customer Shopping Cart</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" href="{{ url_for('public.customerDeliveryRating') }}">Customer Delivery Rating</a>
+      </li>
+      <li class="nav-item">
+          <a class="nav-link" href="{{ url_for('public.customerFoodRating') }}">Customer Food Rating</a>
+        </li>
     </ul>
     {% if current_user and current_user.is_authenticated %}
     <ul class="navbar-nav my-auto">
